<?xml version="1.0"?>
<package format="2">
  <name>chromavore</name>
  <version>0.1.1</version>
  <description>the chromavore package offers chromavore_node, an ROS node build around color recognition, along with the development tools used to build its imaging pipeline</description>

  <maintainer email="gary.hendrick.fellow@sofwerx.org">Gary Hendrick</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/sofwerx/chromavore</url>


  <author email="gary.hendrick.fellow@sofwerx.org">Gary Hendrick</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
</package>
